create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header6 cid-sCAuFCqWoZ mbr-fullscreen mbr-parallax-background" id="header6-NaN">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header6 cid-sCAuFCqWoZ mbr-fullscreen mbr-parallax-background" id="header6-NaN">
 
     
 
@@ -454,7 +454,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 100%;">
-            <div><iframe class="mbr-embedded-video" src="https://playshop.oss-cn-shanghai.aliyuncs.com/B9-2-1.mp4?loop=0&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://playshop.oss-cn-shanghai.aliyuncs.com/B9-2-1.mp4?loop=1&amp;autoplay=1" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
